@@ -116,7 +116,7 @@ public class SpawnUtil {
 						for (Location loc : town.getAllOutpostSpawns()) {
 							TownBlock tboutpost = TownyAPI.getInstance().getTownBlock(loc);
 							if (tboutpost != null) {
-								String name = tboutpost.getName();
+								String name = !tboutpost.hasPlotObjectGroup() ? tboutpost.getName() : tboutpost.getPlotObjectGroup().getName();
 								if (name.startsWith(split[split.length - 1])) {
 									index = 1 + town.getAllOutpostSpawns().indexOf(loc);
 								}
@@ -138,7 +138,7 @@ public class SpawnUtil {
 					for (Location loc : town.getAllOutpostSpawns()) {
 						TownBlock tboutpost = TownyAPI.getInstance().getTownBlock(loc);
 						if (tboutpost != null) {
-							String name = tboutpost.getName().toLowerCase();
+							String name = !tboutpost.hasPlotObjectGroup() ? tboutpost.getName() : tboutpost.getPlotObjectGroup().getName();
 							if (name.startsWith(split[split.length - 1].toLowerCase())) {
 								index = 1 + town.getAllOutpostSpawns().indexOf(loc);
 							}
